change web page access password and secret key

--- a/config.json
+++ b/config.json
@@ -44,8 +44,8 @@
     },
 
     "http": {
-      "http_auth_secret_key": "6d25a684-9558-11e9-aa94-efccd7a0659b",
-      "http_auth_password": "6.67428e-11",
+      "http_auth_secret_key": "6d25a684-9558-11e9-aa96-efccd7a0659b",
+      "http_auth_password": "123",
       "port": "8080"
     }
   }
